deploy/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: rameshkanna.devops.tech  # Your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service  # Matches your Service name
            port:
              number: 80
